--- a/Cases/BS_PAR/BS_PAR.Rmd
+++ b/Cases/BS_PAR/BS_PAR.Rmd
@@ -2,11 +2,11 @@
 title: "Black Sea PAR attenuation"
 author: "Arthur Capet"
 date: "November 20, 2018"
-output: pdf_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE,comment = FALSE, echo=FALSE)
+knitr::opts_chunk$set(warning = FALSE,comment = FALSE, echo=TRUE)
 ```
 
 # The ArgoDiva Toolbox framework. 
